force-app/main/default/objects/CP_Training__c/CP_Training__c.object-meta.xml
<CustomObject>
    <label>CP Training</label>
    <nameField>
        <label>Training Type / Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>