force-app/main/default/objects/CP_Training__c/fields/Coordinating_Program__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinating Program</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CP Trainings</relationshipLabel>
    <relationshipName>CP_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>