force-app/main/default/objects/CP_Training__c/fields/CP_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>CP_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>