force-app/main/default/objects/CP_Training__c/fields/Date_Of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Completion__c</fullName>
    <label>Date Of Completion</label>
    <type>DateTime</type>
</CustomField>