force-app/main/default/objects/CP_Training__c/fields/Participation_Status__c.field-meta.xml
<CustomField>
    <fullName>Participation_Status__c</fullName>
    <label>Participation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Excused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>